change copyright content

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 	</section>
 	<!--footer--------->
 	<footer>
-	<p>Going To Internet, Ltd Consumer Website</p>
-	<p>Copyright 2020 - GoingToInternet</p>
+	<p>barun_pandit</p>
+	<p>Copyright 2021 - WebVarJunction</p>
 	</footer>
   
 
